# brainfuch

./: .travis.yml  Brainfuch.hs  Brainfuck.hs  BrainfuckParser.hs  Comonad.hs  ListTape.hs  Main.hs  Optimize.hs  Parser.hs  README.md  Stream.hs  Superfuck.hs  Tape.hs  Types.hs  brainfuch.cabal  makefile
app/: Main.hs
bfExamplePrograms/: factor.bf  mandelbrot.bf  quine.bf
bf_example_source_files/: 99bottles.bf  factorial.bf
src/: Brainfuch.hs  Compile.hs  Main.hs  Optimize.hs  Parser.hs  Stream.hs  Tape.hs  Types.hs  Utilities.hs
test/: Main.hs
