name:                brainfuch
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/quchen/brainfuch#readme
license:             BSD3
license-file:        LICENSE
author:              David »quchen« Luposchainsky <dluposchainsky (λ) google>
maintainer:          David »quchen« Luposchainsky <dluposchainsky (λ) google>
copyright:           David »quchen« Luposchainsky <dluposchainsky (λ) google>
category:            Interpreter
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Brainfuch
                     , Compile
                     , Optimize
                     , Parser
                     , Stream
                     , Tape
                     , Types
                     , Utilities
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , dlist
                     , mtl
                     , text
  ghc-options:         -Wall -Wcompat
  default-language:    Haskell2010

executable brainfuch-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Wcompat -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , brainfuch
                     , text
  default-language:    Haskell2010

test-suite testsuite
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Main.hs
    build-depends:
          base
        , brainfuch

        , tasty
        , tasty-hunit
        , text
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
    default-language: Haskell2010

    if impl(ghc < 8.0)
        build-depends: semigroups >= 0.6 && < 0.19

source-repository head
  type:     git
  location: https://github.com/quchen/brainfuch
